Home and not found testing and basic styling, added favicon and logo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,29 @@
+
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "KLK",
+  "name": "KanyeLovesKanye",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "yeezus.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "yeezus.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "yeezus.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#FFD700", 
+  "background_color": "#000000", 
+  "description": "The ultimate fan page for Kanye West enthusiasts.",
+  "orientation": "portrait",
+  "lang": "en-US"
 }
